# bookmark-ui

./: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: main.ts  styles.css  styles.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-wasm/: Cargo.toml
src-wasm/src/: lib.rs
